# segv-test

./: Cargo.toml  Cross.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs
src/impl/: common.c  unix.c  windows.c
tests/: basic.rs
